[gd_scene load_steps=2 format=3 uid="uid://mt76hyi6jq2q"]

[ext_resource type="Script" uid="uid://bycdhw62lo3qv" path="res://Scripts/debug_menu.gd" id="1_c8q1c"]

[node name="Debug" type="CanvasLayer"]
script = ExtResource("1_c8q1c")

[node name="Debug" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Debug"]
self_modulate = Color(1, 1, 1, 0.5764706)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -228.0
offset_right = 192.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_constants/separation = 19

[node name="ListInventory" type="Button" parent="Debug/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "List Inventory"

[node name="AddTestItem" type="Button" parent="Debug/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Add Test Item"

[node name="RemoveTestItem" type="Button" parent="Debug/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Remove Test Item"

[node name="AddTestConsumable" type="Button" parent="Debug/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Add Test Consumable"

[connection signal="pressed" from="Debug/Panel/ScrollContainer/VBoxContainer/ListInventory" to="." method="_on_list_inventory_pressed"]
[connection signal="pressed" from="Debug/Panel/ScrollContainer/VBoxContainer/AddTestItem" to="." method="_on_add_test_item_pressed"]
[connection signal="pressed" from="Debug/Panel/ScrollContainer/VBoxContainer/RemoveTestItem" to="." method="_on_remove_test_item_pressed"]
[connection signal="pressed" from="Debug/Panel/ScrollContainer/VBoxContainer/AddTestConsumable" to="." method="_on_add_test_consumable_pressed"]
